--- a/index.html
+++ b/index.html
@@ -26,19 +26,24 @@
         
         /* 標題調整 */
         .title {
-            position: absolute; top: 30px; color: var(--gold); text-align: center;
-            font-size: 24px; font-weight: bold; text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
-            letter-spacing: 2px;
+         color: var(--gold); 
+    	text-align: center;
+   	 font-size: 24px; 
+ 	 font-weight: bold; 
+    	text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    	letter-spacing: 2px;
+    	margin-bottom: 30px; /* 與九宮格的間距 */
         }
 
         /* 新增 LOGO 樣式 */
         .logo-container {
-            margin-bottom: 20px;
-            z-index: 5;
-            text-align: center;
+	margin-top: -40px; /* 向上微調位置 */
+   	margin-bottom: 10px;
+    	z-index: 5;
         }
+
         .logo-img {
-            max-width: 150px; /* 您可以根據圖片大小調整寬度 */
+            max-width: 120px; /* 您可以根據圖片大小調整寬度 */
             height: auto;
             drop-shadow: 0 4px 8px rgba(0,0,0,0.3);
         }
@@ -103,7 +108,7 @@
 <body>
 
 <div class="app-container">
- 	<div class="logo-container">
+ <div class="logo-container">
         <img src="./umama02.png" alt="LOGO" class="logo-img">
    	 </div>
     
