Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     function handleClaim() {
         liff.openWindow({
-            url: "https://lin.ee/f620Cbo",
+            url: "https://lin.ee/5hUiK5y2",
             external: false
         });
         setTimeout(() => {
@@ -206,4 +206,5 @@
 
 </body>
 </html>
+
 
